# pyTerrainTree

./: .gitignore  .gitmodules  README.md  build.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build.yml  quick_test.yml  tests.yml
examples/: lro_lola.ipynb
pyterraintree/: terraintree.py  tree.py
pyterraintree/cython/: Mesh.pxd  Node_V.pxd  PRT_Tree.pxd  Reader.pxd  Reindexer.pxd  Terrain_Trees.pyx  Triangle.pxd  Vertex.pxd  c_Geometry.pxd  c_Mesh.pxd  c_Node_V.pxd  c_PRT_Tree.pxd  c_Reader.pxd  c_Reindexer.pxd  c_Terrain_Trees.pxd  c_Triangle.pxd  c_Vertex.pxd  c_Writer.pxd  py_terrain_trees.pyx  pyterraintree.pyx
tests/: __init__.py  test_Terrain_Trees.py  test_depth_first_traversal.py  test_geometries.py  test_mesh.py  test_node.py  test_point.py  test_point_region_tree.py  test_simplexes.py  test_simplices.py  test_soup.py  test_structures.py  test_tree.py  test_trees.py  test_triangle.py  test_vertex.py
tests/data/: devil_0.tri
tests/data/input/: simple_terrain.soup
