[tool.poetry]
name = 'pyterraintree'
version = '0.0.0'
description = 'Python wrapper around Terrain Trees library'
authors = ['Yunting Song <ytsong@terpmail.umd.edu>', 'Zach Burnett <zrb@umd.edu>']
license = 'GPL-3.0-or-later'
readme = 'README.md'
repository = 'https://github.com/zacharyburnett/pyterraintree'
build = 'build.py'

[build-system]
requires = [
    'cython',
    'poetry-core>=1.0.0',
    'poetry-dynamic-versioning',
    'setuptools',
]
build-backend = 'poetry.core.masonry.api'

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry.dependencies]
python = '^3.6'
typepigeon = '*'
isort = { version = '*', optional = true }
oitnb = { version = '*', optional = true }
pytest = { version = '*', optional = true }
pytest-cov = { version = '*', optional = true }
pytest-xdist = { version = '*', optional = true }
m2r2 = { version = '*', optional = true }
sphinx = { version = '*', optional = true }
sphinx-rtd-theme = { version = '*', optional = true }

[tool.poetry.extras]
testing = ['pytest', 'pytest-cov', 'pytest-xdist']
development = ['isort', 'oitnb']

[tool.flake8]
filename = '*.py, *.pyx'