[project]
name = 'pyterraintree'
description = 'Python wrapper around Terrain Trees library'
readme = 'README.md'
requires-python = '>=3.6'
license = { file = 'LICENSE' }
authors = [{ name = 'Yunting Song', email = 'ytsong@terpmail.umd.edu' }, { name = 'Zach Burnett', email = 'zrb@umd.edu' }]
dependencies = ['typepigeon >=1.0']
dynamic = ['version']

[project.optional-dependencies]
test = ['pytest', 'pytest-cov', 'pytest-xdist']
lint = ['isort', 'oitnb']
docs = ['m2r2', 'sphinx', 'sphinx-rtd-theme']

[project.urls]
repository = 'https://github.com/zacharyburnett/pyterraintree'

[build-system]
requires = [
    'cython',
    'setuptools >=42',
    'setuptools_scm[toml] >=3.4',
    'wheel',
]
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]

[tool.setuptools]
packages = ['pyterraintree']