[metadata]
name = pyterraintree
author = Yunting Song, Zach Burnett
author_email = ytsong@terpmail.umd.edu, zrb@umd.edu
description = Python wrapper around Terrain Trees library
long_description = file: README.md
license = GPLv3
url = https://pyterraintree.readthedocs.io

[tool:pytest]
addopts = --verbose
python_files = tests/**.py
