[metadata]
name = pyterraintree
author = Yunting Song <ytsong@terpmail.umd.edu>, Zach Burnett <zrb@umd.edu>
description = Python wrapper around Terrain Trees library
long_description = file:README.md
long_description_content_type = text/markdown
license = GPLv3
python_version = >=3.7
url = https://github.com/zacharyburnett/pyterraintree

[options]
install_requires =
    typepigeon

[options.extras_require]
testing =
    pytest
    pytest-cov
    pytest-xdist
development =
    flake8
    isort
    oitnb
documentation =
    m2r2
    sphinx
    sphinx-rtd-theme
